# under-stress

./: .gitignore  Readme.md  docker-compose.yml  siege_urls.txt
server/: Dockerfile  pyproject.toml
server/app/: settings.py  urls.py
server/products/: admin.py  models.py
server/products/api/: serializers.py  urls.py  views.py
server/products/migrations/: 0001_initial.py
